p2ws_package/Devpp2ws-Package/objects/Purge_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Older_Than_N_Months__c</fullName>
        <label>Older Than N Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Purge Setting</label>
    <pluralLabel>Purge Settings</pluralLabel>
</CustomObject>